# rust-exercises

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
advent_of_code/: Cargo.toml
advent_of_code/src/: main.rs
advent_of_code/src/day1/: mod.rs
advent_of_code/src/day2/: mod.rs
advent_of_code/src/day3/: mod.rs
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day6_input.txt  day7.rs  day8.rs  day9.rs  intcode.rs  main.rs
