[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Itamar Gafni <itamargafni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "0.2.13", features = ["full"]}
rayon = "1.3.0"